--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,21 @@
     <groupId>org.example</groupId>
     <artifactId>springframework</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>jar</packaging>
 
-    <name>small-spring-step-01</name>
+    <name>small-spring-step-02</name>
     <description>
         small spring is easy study Spring！
     </description>
