--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.5.0</version>
+        </dependency>
     </dependencies>
 
 </project>
